--- a/docs/style.css
+++ b/docs/style.css
@@ -1,12 +1,10 @@
 .download-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
+    flex-wrap: nowrap;
   }
   
   .download-card {
-    width: 600px;
+    width: 100%;
     padding: 20px;
     display: flex;
     flex-direction: column;
